--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -54,15 +54,15 @@ workflow.system.task.worker.poll.interval=${POLL_INTERVAL}
 decider.sweep.disable=${IS_SWEEP_DISABLED}
 decider.sweep.frequency.seconds=${SWEEP_FREQ}
 
-flo.indexer.topic.name=${FLO_INDEXER_TOPIC_NAME:ff-flo-event-logs}
-flo.indexer.topic.faultStrategy=${FLO_INDEXER_TOPIC_FAULT_STRATEGY:NONE}
-flo.indexer.topic.enableEncryption=${FLO_INDEXER_TOPIC_ENABLE_ENCRYPTION:false}
-flo.indexer.topic.keyId=${ENCRYPTION_KEY_ID:flo_indexer_encryption_key_id}
+FLO.INDEXER.TOPIC.NAME=${FLO_INDEXER_TOPIC_NAME:ff-flo-event-logs}
+FLO.INDEXER.TOPIC.FAULT.STRATEGY=${FLO_INDEXER_TOPIC_FAULT_STRATEGY:NONE}
+FLO.INDEXER.TOPIC.ENABLE.ENCRYPTION=${FLO_INDEXER_TOPIC_ENABLE_ENCRYPTION:false}
+ENCRYPTION.KEY.ID=${ENCRYPTION_KEY_ID:flo_indexer_encryption_key_id}
 
-producer.primary.bootstrapServers=${PRIMARY_BOOTSTRAP_SERVERS:localhost:9092}
-producer.primary.authMechanism=${PRIMARY_AUTH_MECHANISM:SASL_PLAIN}
-producer.primary.username=${KAFKA_TXN_PRIMARY_API_KEY:}
-producer.primary.password=${KAFKA_TXN_PRIMARY_API_SECRET:}
-producer.clientId=${TIER1_PRODUCER_CLIENT_ID:ff-flo-platform}
-producer.enableCompression=${TIER1_PRODUCER_ENABLE_COMPRESSION:true}
-producer.acks=${TIER1_PRODUCER_ACKS:ALL}
+PRIMARY.BOOTSTRAP.SERVERS=${PRIMARY_BOOTSTRAP_SERVERS:localhost:9092}
+PRIMARY.AUTH.MECHANISM=${PRIMARY_AUTH_MECHANISM:SASL_PLAIN}
+KAFKA.TXN.PRIMARY.API.KEY=${KAFKA_TXN_PRIMARY_API_KEY:}
+KAFKA.TXN.PRIMARY.API.SECRET=${KAFKA_TXN_PRIMARY_API_SECRET:}
+TIER1.PRODUCER.CLIENT.ID=${TIER1_PRODUCER_CLIENT_ID:ff-flo-platform}
+TIER1.PRODUCER.ENABLE.COMPRESSION=${TIER1_PRODUCER_ENABLE_COMPRESSION:true}
+PRODUCER.ACKS=${PRODUCER_ACKS:ALL}
