--- a/charts/netflix-conductor/files/log4j.properties
+++ b/charts/netflix-conductor/files/log4j.properties
@@ -1,5 +1,7 @@
 # Set root logger level to DEBUG and its only appender to A1.
 # WARN is default, but we leave the WARN here for convenience, so we dont need to look them up when needed.
+# AVOID TOO MANY LOGGING NOISE IF POSSIBLE
+# DETAIL ABOUT OPERATION CAN BE OBTAIN VIA SCALING REPLICA TO 1 AND ATTACHING DEBUGGER, EXCEPT SPECIAL CASE WHERE VERBOSE LOG IS TEMPORARILY ON
 log4j.rootLogger=WARN, JSON
 
 # A1 is human friendly
@@ -30,8 +32,8 @@ log4j.logger.org.eclipse.jetty.server.HttpChanne=WARN
 log4j.logger.org.eclipse.jetty.server.Serve=WARN
 
 # This log rollback event, execution skipped due to rate limiting.
-log4j.logger.com.netflix.conductor.dao.mysql=INFO
+log4j.logger.com.netflix.conductor.dao.mysql=WARN
 
 # Ack task taken,completion for monitoring contract with workers
-log4j.logger.com.netflix.conductor.service.TaskServiceImpl=INFO
-log4j.logger.com.netflix.conductor.mysql=INFO
+log4j.logger.com.netflix.conductor.service.TaskServiceImpl=WARN
+log4j.logger.com.netflix.conductor.mysql=WARN
