--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -39,7 +39,7 @@ queues.dynomite.nonQuorum.port=22122
 # memory: The instance is created in memory and lost when the server dies. Useful for development and testing.
 # external: Elastic search instance runs outside of the server. Data is persisted and does not get lost when
 #           the server dies. Useful for more stable environments like staging or production.
-workflow.elasticsearch.instanceType=external
+workflow.elasticsearch.instanceType=EXTERNAL
 
 # Transport address to elasticsearch
 workflow.elasticsearch.url=es:9300
@@ -48,14 +48,14 @@ workflow.elasticsearch.url=es:9300
 workflow.elasticsearch.index.name=conductor
 
 # Set elasticsearch version
-workflow.elasticsearch.version=5
+workflow.elasticsearch.version=6
 
 # Additional modules (optional)
 # conductor.additional.modules=class_extending_com.google.inject.AbstractModule
 
 # Additional modules for metrics collection (optional)
-# conductor.additional.modules=com.netflix.conductor.contribs.metrics.MetricsRegistryModule,com.netflix.conductor.contribs.metrics.LoggingMetricsModule
-# com.netflix.conductor.contribs.metrics.LoggingMetricsModule.reportPeriodSeconds=15
+conductor.additional.modules=com.netflix.conductor.contribs.metrics.MetricsRegistryModule,com.netflix.conductor.contribs.metrics.LoggingMetricsModule,com.netflix.conductor.contribs.ArchivingWorkflowModule
+com.netflix.conductor.contribs.metrics.LoggingMetricsModule.reportPeriodSeconds=15
 
 # Load sample kitchen sink workflow
 loadSample=false
