--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -38,15 +38,15 @@ conductor.elasticsearch.url=http://es:9200
 conductor.elasticsearch.indexName=conductor
 
 # Set elasticsearch version
-workflow.elasticsearch.version=5
+workflow.elasticsearch.version=6
 
 # Additional modules for metrics collection exposed via logger (optional)
 # conductor.metrics-logger.enabled=true
 # conductor.metrics-logger.reportPeriodSeconds=15
 
 # Additional modules for metrics collection exposed to Prometheus (optional)
-# conductor.metrics-prometheus.enabled=true
-# management.endpoints.web.exposure.include=prometheus
+conductor.metrics-prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
 
 # To enable Workflow/Task Summary Input/Output JSON Serialization, use the following:
 # conductor.app.summary-input-output-json-serialization.enabled=true
