fix all in one Dockerfile

--- a/docker/serverAndUI/Dockerfile
+++ b/docker/serverAndUI/Dockerfile
@@ -3,24 +3,33 @@
 #
 FROM openjdk:8-jdk
 
-MAINTAINER Netflix OSS <conductor@netflix.com>
-RUN apt-get update -y && apt-get -y install git curl
-RUN curl -sL https://deb.nodesource.com/setup_10.x |  bash
-RUN apt-get install -y nodejs
-RUN apt-get install -y npm
-
 # Make app folders
-RUN mkdir -p /app/config /app/logs /app/libs /app/ui
-COPY ./ui /app/ui
-COPY docker/serverAndUI/bin /app
-COPY docker/serverAndUI/config /app/config
-COPY server/build/libs/conductor-server-*-all.jar /app/libs
-COPY docker/server/newrelic-agent-5.4.0 /newrelic
+RUN mkdir -p /app/config /app/logs /app/libs
 
+# Startup script(s)
+COPY ./bin /app
 
-RUN cd /app/ui \
-  && npm install -s \
-  && npm run build -s --server
+# Configs
+COPY ./config /app/config
+
+# Get all the dependencies
+RUN apt-get update -y \
+  && apt-get -y install git curl \
+  && chmod +x /app/startup.sh \
+  && curl -sL https://deb.nodesource.com/setup_10.x |  bash - \
+  && apt-get install -y nodejs build-essential
+
+# Get and install conductor
+RUN git clone https://github.com/Netflix/conductor.git \
+  && cd conductor \
+  && ./gradlew build -x test \
+  && mv ./server/build/libs/conductor-server-*-all.jar /app/libs/ \
+  && mv ./ui /app \
+  && cd /app/ui \
+  && npm install \
+  && npm run build --server \
+  && cd / \
+  && rm -rf conductor
 
 EXPOSE 5000 8080
 
