fix to run conductor locally/preview

--- a/charts/preview/values.yaml
+++ b/charts/preview/values.yaml
@@ -109,6 +109,9 @@ elasticsearch:
   host: http://preview-elasticsearch-client
   port: 9200
   indexName: "conductor"
+  master:
+    persistence:
+      enabled: false
 
 # Add the following and change enabled to true if external redis required
 redis:
