add placeholders for master-name in config

--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -60,6 +60,8 @@ workflow.decider.locking.leaseTimeInSeconds=60
 # workflow.redis.locking.server.type=single
 #Comma separated list of server nodes
 # workflow.redis.locking.server.address=redis://127.0.0.1:6379
+#Redis sentinel master name
+# workflow.redis.locking.server.master.nam=master
 
 #Following properties set for using AMQP events and tasks with conductor:
 
