--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -61,7 +61,7 @@ workflow.decider.locking.leaseTimeInSeconds=60
 #Comma separated list of server nodes
 # workflow.redis.locking.server.address=redis://127.0.0.1:6379
 #Redis sentinel master name
-# workflow.redis.locking.server.master.nam=master
+# workflow.redis.locking.server.master.name=master
 
 #Following properties set for using AMQP events and tasks with conductor:
 
