CPDBDS-921 | update server health check

--- a/charts/netflix-conductor/templates/deployment-conductor-server.yaml
+++ b/charts/netflix-conductor/templates/deployment-conductor-server.yaml
@@ -91,11 +91,11 @@ spec:
           livenessProbe:
             initialDelaySeconds: 210
             httpGet:
-              path: /
+              path: {{ .Values.server.probePath }}
               port: server
           readinessProbe:
             httpGet:
-              path: /
+              path: {{ .Values.server.probePath }}
               port: server
             initialDelaySeconds: 120
             periodSeconds: 10
