--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -13,23 +13,35 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+db=mysql
+
+jdbc.url=jdbc:mysql://localhost:3306/conductor
+jdbc.username=conductor
+jdbc.password=conductor
+conductor.mysql.connection.pool.size.max=30
+conductor.mysql.connection.pool.idle.min=10
+flyway.table=conductor_flyway
 
 #Dynomite Cluster details.
 #format is host:port:rack separated by semicolon
-workflow.dynomite.cluster.hosts=host1:port:rack;host2:port:rack:host3:port:rack
+#workflow.dynomite.cluster.hosts=host1:port:rack;host2:port:rack:host3:port:rack
+#workflow.dynomite.cluster.hosts=127.0.0.1:6379:rack1
+#workflow.dynomite.cluster.name=conductor_dyno
 
 #namespace for the keys stored in Dynomite/Redis
-workflow.namespace.prefix=
+#workflow.namespace.prefix=conductor
 
 #namespace prefix for the dyno queues
-workflow.namespace.queue.prefix=
+#workflow.namespace.queue.prefix=conductor_queues
 
 #no. of threads allocated to dyno-queues
-queues.dynomite.threads=10
+#queues.dynomite.threads=10
+#workflow.dynomite.connection.maxConnsPerHost=10
 
 #non-quorum port used to connect to local redis.  Used by dyno-queues
-queues.dynomite.nonQuorum.port=22122
+#queues.dynomite.nonQuorum.port=6379
 
+workflow.elasticsearch.instanceType=external
 #Transport address to elasticsearch
 workflow.elasticsearch.url=localhost:9300
 
@@ -40,7 +52,8 @@ workflow.elasticsearch.index.name=conductor
 workflow.elasticsearch.version=2
 
 # For a single node dynomite or redis server, make sure the value below is set to same as rack specified in the "workflow.dynomite.cluster.hosts" property.
-EC2_AVAILABILITY_ZONE=us-east-1c
+EC2_AVAILABILITY_ZONE=rack1
+EC2_REGION=
 
 # disable archival service
 workflow.archive=false
