Support for task resiliency on persistence features, and tests to verify the same using AOP based failure injection.
Added the configuration to control WorkflowRepairService from the sweeper service.

Replaced AOP based QueueDAO failure tests with Spock Spy's

--- a/test-harness/build.gradle
+++ b/test-harness/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     testCompile "org.codehaus.groovy:groovy-all:${revGroovy}"
     testCompile "org.spockframework:spock-core:${revSpock}"
+    testCompile "org.spockframework:spock-guice:${revSpock}"
     testCompile 'com.netflix.governator:governator-test-spock:latest.release'
     testCompile "org.elasticsearch:elasticsearch:${revElasticSearch5}"
     testCompile "org.elasticsearch.client:transport:${revElasticSearch5}"
