Making repairservice default in properties files

--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -27,6 +27,10 @@ workflow.namespace.queue.prefix=
 #no. of threads allocated to dyno-queues
 queues.dynomite.threads=10
 
+# By default with dynomite, we want the repairservice enabled
+workflow.repairservice.enabled=true
+
+
 #non-quorum port used to connect to local redis.  Used by dyno-queues
 queues.dynomite.nonQuorum.port=22122
 
