--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -46,6 +46,13 @@ workflow.elasticsearch.url=es:9300
 # Name of the elasticsearch cluster
 workflow.elasticsearch.index.name=conductor
 
+# The prefix added to the name of semaphores for concurrent task limit
+workflow.execution.executionLimitingSemaphoreName=conductor.task_semaphore_
+
+# Enable concurrent task limit for WorkflowTasks
+workflow.execution.enableGlobalTaskConcurrentExecLimit=true
+workflow.execution.enableLocalTaskConcurrentExecLimit=true
+
 # Additional modules (optional)
 # conductor.additional.modules=class_extending_com.google.inject.AbstractModule
 
