add support for json schema and validation for workflow input

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ allprojects {
         maven {
             url "https://dl.bintray.com/netflixoss/oss-candidate"
         }
+
+        maven { url 'https://jitpack.io' }
     }
 }
 
