--- a/core/build.gradle
+++ b/core/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile "javax.validation:validation-api:${revValidationApi}"
     // https://mvnrepository.com/artifact/org.glassfish/javax.el
     compile group: 'org.glassfish', name: 'javax.el', version: "${revJavaElApi}"
-    
+    compile "com.github.everit-org.json-schema:org.everit.json.schema:${revJsonSchema}"
+
     testCompile "org.slf4j:slf4j-log4j12:${revSlf4jlog4j}"
 }
