add back kafka client version

--- a/versionsOfDependencies.gradle
+++ b/versionsOfDependencies.gradle
@@ -71,4 +71,5 @@ ext {
     revGroovy = '2.4.15'
     revSpock = '1.3-groovy-2.4'
     revHamcrestAllMatchers = '1.8'
+    revKafkaClient = '2.2.0'
 }
