--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,6 +23,7 @@ ext {
     revGuavaRetrying = '2.0.0'
     revHealth = '1.1.+'
     revJedis = '3.3.0'
+    revJersey = '1.19.4'
     revJettyServer = '9.4.34.v20201102'
     revJettyServlet = '9.4.34.v20201102'
     revJsonPath = '2.4.0'
