--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ allprojects {
 
     dependencies {
         testImplementation('org.springframework.boot:spring-boot-starter-test')
+        testImplementation('org.springframework.boot:spring-boot-starter-log4j2')
     }
 
     test {
@@ -83,10 +84,6 @@ tasks.coveralls {
     description = "Uploads the aggregated coverage report to Coveralls"
 }
 
-//task runApp {
-//    dependsOn ':conductor-server:bootRun'
-//}
-//
-//task server {
-//    dependsOn ':conductor-server:bootRun'
-//}
+task server {
+    dependsOn ':conductor-server:bootRun'
+}
