--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,13 @@ name: CI
 
 on:
   push:
-    branches: [ '3.0' ]
-    tags: [ v3.* ]
+    branches:
+      - '3.0'
+    tags:
+      - v3.*
   pull_request:
-    branches: [ '3.0' ]
+    branches:
+      - '3.0'
 
   # Allow running this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,6 +22,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Gradle wrapper validation
+        uses: gradle/wrapper-validation-action@v1
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -30,4 +37,6 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
       - name: Build with Gradle
-        run: ./gradlew build -x javadoc
+        run: |
+          echo "Running build for commit ${{ github.sha }} in ${{ github.head_ref }}"
+          ./gradlew build -x javadoc
