--- a/versionsOfDependencies.gradle
+++ b/versionsOfDependencies.gradle
@@ -14,6 +14,7 @@ ext {
     revElasticSearch5 = '5.6.8'
     revElasticSearch5Client = '5.6.8'
     revElasticSearch6 = '6.8.12'
+    revElasticSearch7 = '7.10.1'
     revEurekaClient = '1.8.7'
     revFlywayCore ='4.0.3'
     revGrpc = '1.14.+'
