--- a/versionsOfDependencies.gradle
+++ b/versionsOfDependencies.gradle
@@ -42,6 +42,7 @@ ext {
     revJq = '0.0.12'
     revLog4jApi = '2.9.1'
     revLog4jCore = '2.9.1'
+    revMicrosoftSqlServerDriver = '8.4.1.jre8'
     revMockito = '3.1.0'
     revPowerMock = '2.0.9'
     revMySqlConnector = '8.0.11'
