--- a/charts/preview/requirements.yaml
+++ b/charts/preview/requirements.yaml
@@ -2,21 +2,21 @@
 dependencies:
 - alias: expose
   name: exposecontroller
-  repository: http://chartmuseum.jenkins-x.io
-  version: 2.3.92
+  repository: https://artifactory.cluster.foxsports-gitops-prod.com.au/artifactory/helm/
+  version: 2.3.112
 - alias: cleanup
   name: exposecontroller
-  repository: http://chartmuseum.jenkins-x.io
-  version: 2.3.92
+  repository: https://artifactory.cluster.foxsports-gitops-prod.com.au/artifactory/helm/
+  version: 2.3.112
 
 - name: elasticsearch
   version: 1.31.1
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: https://charts.helm.sh/stable
   condition: elasticsearch.enabled
 
 - name: mysql
   version: 1.2.0
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: https://charts.helm.sh/stable
   condition: mysql.enabled
 
 - alias: netflix-conductor
