Improve coverage and more
* SqlServer in memroy tables test for queue and lock.

* Improve coverage for SqlServerLock and SqlServerQueueDAO

* queue->peek: order by the identity column instead of created on

--- a/sqlserver-persistence/docker/sqlserver/Dockerfile
+++ b/sqlserver-persistence/docker/sqlserver/Dockerfile
@@ -3,5 +3,6 @@ FROM mcr.microsoft.com/mssql/server
 COPY sqlserver/ /sqlinit
 USER root
 RUN chmod +x /sqlinit/entrypoint.sh
+RUN mkdir -p /var/sqlmem && chown -R mssql /var/sqlmem
 USER mssql
 CMD [ "/bin/bash", "/sqlinit/entrypoint.sh" ]
