sub workflow on retry sets the changed flag in parent.

--- a/test-harness/src/test/resources/application-integrationtest.properties
+++ b/test-harness/src/test/resources/application-integrationtest.properties
@@ -10,31 +10,31 @@ conductor.app.appId=conductor
 conductor.app.sweepDisabled=false
 conductor.app.sweepFrequency=30
 
-conductor.app.systemTaskWorkersDisabled=true
-conductor.app.systemTaskWorkerCallbackDuration=0
-conductor.app.systemTaskWorkerThreadCount=0
+conductor.app.system-task-workers-disabled=true
+conductor.app.system-task-worker-callback-duration=0
+conductor.app.system-task-worker-thread-count=0
 
-conductor.app.eventMessageIndexingEnabled=true
-conductor.app.eventExecutionIndexingEnabled=true
+conductor.app.event-message-indexing-enabled=true
+conductor.app.event-execution-indexing-enabled=true
 
-conductor.app.workflowRepairServiceEnabled=false
+conductor.app.workflow-repair-service-enabled=false
 
-conductor.app.workflowExecutionLockEnabled=false
+conductor.app.workflow-execution-lock-enabled=false
 
-conductor.app.workflowInputPayloadSizeThreshold=10KB
-conductor.app.maxWorkflowInputPayloadSizeThreshold=10240KB
-conductor.app.workflowOutputPayloadSizeThreshold=10KB
-conductor.app.maxWorkflowOutputPayloadSizeThreshold=10240KB
-conductor.app.taskInputPayloadSizeThreshold=10KB
-conductor.app.maxTaskInputPayloadSizeThreshold=10240KB
-conductor.app.taskOutputPayloadSizeThreshold=10KB
-conductor.app.maxTaskOutputPayloadSizeThreshold=10240KB
-conductor.app.maxWorkflowVariablesPayloadSizeThreshold=2KB
+conductor.app.workflow-input-payload-size-threshold=10KB
+conductor.app.max-workflow-input-payload-size-threshold=10240KB
+conductor.app.workflow-output-payload-size-threshold=10KB
+conductor.app.max-workflow-output-payload-size-threshold=10240KB
+conductor.app.task-input-payload-size-threshold=10KB
+conductor.app.max-task-input-payload-size-threshold=10240KB
+conductor.app.task-output-payload-size-threshold=10KB
+conductor.app.max-task-output-payload-size-threshold=10240KB
+conductor.app.max-workflow-variables-payload-size-threshold=2KB
 
-conductor.redis.availabilityZone=us-east-1c
-conductor.redis.dataCenterRegion=us-east-1
-conductor.redis.workflowNamespacePrefix=integration-test
-conductor.redis.queueNamespacePrefix=integtest
+conductor.redis.availability-zone=us-east-1c
+conductor.redis.data-center-region=us-east-1
+conductor.redis.workflow-namespace-prefix=integration-test
+conductor.redis.queue-namespace-prefix=integtest
 
-conductor.elasticsearch.indexPrefix=conductor
-conductor.elasticsearch.clusterHealthColor=yellow
+conductor.elasticsearch.index-prefix=conductor
+conductor.elasticsearch.cluster-health-color=yellow
