Updated Task/Workflow Summary Input/Output Json String configuration management and added in tests for the additional features as well as a regression test for expected default behavior

--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -56,5 +56,8 @@ workflow.elasticsearch.index.name=conductor
 # conductor.additional.modules=com.netflix.conductor.contribs.metrics.MetricsRegistryModule,com.netflix.conductor.contribs.metrics.LoggingMetricsModule
 # com.netflix.conductor.contribs.metrics.LoggingMetricsModule.reportPeriodSeconds=15
 
+# To enable Workflow/Task Summary Input/Output JSON Serialization, use the following:
+# summary.input.output.json.serialization.enabled=true
+
 # Load sample kitchen sink workflow
 loadSample=true
