--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -95,3 +95,5 @@ workflow.decider.locking.leaseTimeInSeconds=60
 # Setting is ignored if the value is lower or equals to 0
 # workflow.event.queues.amqp.maxPriority=-1
 
+# To enable Workflow/Task Summary Input/Output JSON Serialization, use the following:
+# summary.input.output.json.serialization.enabled=true
