--- a/test-harness/src/test/resources/application-integrationtest.properties
+++ b/test-harness/src/test/resources/application-integrationtest.properties
@@ -1,3 +1,18 @@
+#
+# /*
+#  * Copyright 2021 Netflix, Inc.
+#  * <p>
+#  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
+#  * the License. You may obtain a copy of the License at
+#  * <p>
+#  * http://www.apache.org/licenses/LICENSE-2.0
+#  * <p>
+#  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
+#  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
+#  * specific language governing permissions and limitations under the License.
+#  */
+#
+
 
 conductor.db.type=memory
 conductor.workflow-execution-lock.type=local_only
@@ -7,8 +22,7 @@ conductor.indexing.enabled=false
 conductor.app.stack=test
 conductor.app.appId=conductor
 
-conductor.workflow-sweeper.enabled=true
-conductor.app.sweepFrequency=30
+conductor.app.sweep-frequency=30
 
 conductor.system-task-workers.enabled=false
 conductor.app.system-task-worker-callback-duration=0
