--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,13 +25,12 @@ ext {
     revHealth = '1.1.+'
     revJedis = '3.3.0'
     revJersey = '1.19.4'
-    revJettyServer = '9.4.34.v20201102'
-    revJettyServlet = '9.4.34.v20201102'
     revJsonPath = '2.4.0'
     revJq = '0.0.12'
     revJsr311Api = '1.1.1'
     revKafka = '2.6.0'
     revMicrometer = '1.6.2'
+    revMockServerClient = '5.11.2'
     revNatsStreaming = '0.5.0'
     revOpenapi = '1.4.+'
     revPowerMock = '2.0.9'
