--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,17 +1,14 @@
 #
-# Copyright 2017 Netflix, Inc.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+#  Copyright 2021 Netflix, Inc.
+#  <p>
+#  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
+#  the License. You may obtain a copy of the License at
+#  <p>
+#  http://www.apache.org/licenses/LICENSE-2.0
+#  <p>
+#  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
+#  an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
+#  specific language governing permissions and limitations under the License.
 #
 
 spring.application.name=conductor
@@ -34,8 +31,8 @@ conductor.redis.queueNamespacePrefix=
 #no. of threads allocated to dyno-queues
 queues.dynomite.threads=10
 
-# By default with dynomite, we want the repairservice enabled
-conductor.app.workflowRepairServiceEnabled=true
+# By default with dynomite, we want the repair service enabled
+conductor.workflow-repair-service.enabled=true
 
 #non-quorum port used to connect to local redis.  Used by dyno-queues
 conductor.redis.queuesNonQuorumPort=22122
@@ -62,7 +59,7 @@ conductor.default-event-queue.type=sqs
 # conductor.zookeeper-lock.namespace
 
 #disable locking during workflow execution
-conductor.app.workflowExecutionLockEnabled=false
+conductor.app.workflow-execution-lock-enabled=false
 conductor.workflow-execution-lock.type=noop_lock
 
 #Redis cluster settings for locking module
