--- a/client/build.gradle
+++ b/client/build.gradle
@@ -18,7 +18,7 @@ configurations.all {
 
 dependencies {
     implementation project(':conductor-common')
-
+    implementation project(':conductor-core')
     // SBMTODO: remove guava dep
     implementation "com.google.guava:guava:${revGuava}"
 
