--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'org.apache.logging.log4j:log4j-web'
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    implementation group: 'com.netflix.spectator', name: 'spectator-reg-micrometer', version: '0.80.0'
 }
 
 jar {
