--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -18,6 +18,16 @@ conductor.db.type=memory
 
 conductor.indexing.enabled=false
 
+#OAuth2 Security Details
+##Enable or Disable OAuth2.0 Security
+security.oauth2.enabled=false
+##OAuth2.0 Provider UserInfo URL - Mostly this is remains same as the token URL. However, few providers have a different userInfoUrl endpoint.
+security.oauth2.resource.userInfoUri=http://localhost:9990/auth/realms/master/protocol/openid-connect/userinfo
+##Path to parse in the response JSON that UserInfoURL returns.
+security.oauth2.resource.userInfoUriParserPath=resource_access/conductor_user_client/roles
+##Mapping Endpoint + HTTP Methods + Roles
+security.oauth2.resource.mapping: [{"endpoint":"/api/event/**","http_methods":["POST","PUT","DELETE"],"roles":["role_conductor_super_manager","role_conductor_core_manager","role_conductor_execution_manager","role_conductor_event_manager"]},{"endpoint":"/api/event/**","http_methods":["GET"],"roles":["role_conductor_super_manager","role_conductor_super_manager","role_conductor_super_viewer","role_conductor_core_manager","role_conductor_execution_manager","role_conductor_event_manager","role_conductor_core_viewer","role_conductor_execution_viewer","role_conductor_event_viewer"]},{"endpoint":"/api/workflow/**","http_methods":["POST","PUT","DELETE"],"roles":["role_conductor_super_manager","role_conductor_core_manager","role_conductor_execution_manager","role_conductor_workflow_manager"]},{"endpoint":"/api/workflow/**","http_methods":["GET"],"roles":["role_conductor_super_manager","role_conductor_super_viewer","role_conductor_core_manager","role_conductor_execution_manager","role_conductor_workflow_manager","role_conductor_core_viewer","role_conductor_execution_viewer","role_conductor_workflow_viewer"]},{"endpoint":"/api/tasks/**","http_methods":["POST","PUT","DELETE"],"roles":["role_conductor_super_manager","role_conductor_core_manager","role_conductor_execution_manager","role_conductor_task_manager"]},{"endpoint":"/api/tasks/**","http_methods":["GET"],"roles":["role_conductor_super_manager","role_conductor_super_viewer","role_conductor_core_manager","role_conductor_execution_manager","role_conductor_task_manager","role_conductor_core_viewer","role_conductor_execution_viewer","role_conductor_task_viewer"]},{"endpoint":"/api/metadata/**","http_methods":["POST","PUT","DELETE"],"roles":["role_conductor_super_manager","role_conductor_core_manager","role_conductor_metadata_manager"]},{"endpoint":"/api/metadata/**","http_methods":["GET"],"roles":["role_conductor_super_manager","role_conductor_super_viewer","role_conductor_core_manager","role_conductor_metadata_manager","role_conductor_core_viewer","role_conductor_metadata_viewer"]}]
+
 #Dynomite Cluster details.
 #format is host:port:rack separated by semicolon
 conductor.redis.hosts=host1:port:rack;host2:port:rack:host3:port:rack
