--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -33,7 +33,7 @@ RUN chmod +x /app/startup.sh
 EXPOSE 8080
 EXPOSE 8090
 
-HEALTHCHECK --interval=60s --timeout=30s --retries=10 CMD curl -I -XGET http://localhost:8080/api/health || exit 1
+HEALTHCHECK --interval=60s --timeout=30s --retries=10 CMD curl -I -XGET http://localhost:8080/health || exit 1
 
 CMD [ "/app/startup.sh" ]
 ENTRYPOINT [ "/bin/sh"]
