Adding conductor.indexing.enabled=true config*.properties used in Docker Compose to enable indexing

--- a/docker/server/config/config-mysql-grpc.properties
+++ b/docker/server/config/config-mysql-grpc.properties
@@ -10,8 +10,11 @@ conductor.mysql.jdbcUrl=jdbc:mysql://mysql:3306/conductor
 conductor.mysql.connectionPoolMaxSize=10
 conductor.mysql.connectionPoolMinIdle=2
 
+# Elastic search instance indexing is enabled.
+conductor.indexing.enabled=true
+
 # Transport address to elasticsearch
-conductor.elasticsearch.url=elasticsearch:9300
+conductor.elasticsearch.url=http://es:9200
 
 # Name of the elasticsearch cluster
 conductor.elasticsearch.indexName=conductor
