--- a/docker/server/config/config.properties
+++ b/docker/server/config/config.properties
@@ -28,8 +28,11 @@ conductor.app.workflowRepairServiceEnabled=true
 # For Dynomite, this is 22122 by default or the local redis-server port used by Dynomite.
 conductor.redis.queuesNonQuorumPort=22122
 
+# Elastic search instance indexing is enabled.
+conductor.indexing.enabled=true
+
 # Transport address to elasticsearch
-conductor.elasticsearch.url=es:9300
+conductor.elasticsearch.url=http://es:9200
 
 # Name of the elasticsearch cluster
 conductor.elasticsearch.indexName=conductor
