--- a/docker/server/config/config-mysql-grpc.properties
+++ b/docker/server/config/config-mysql-grpc.properties
@@ -5,13 +5,18 @@ conductor.grpc-server.enabled=true
 conductor.db.type=mysql
 
 conductor.mysql.jdbcUrl=jdbc:mysql://mysql:3306/conductor
+conductor.mysql.jdbcUsername=conductor
+conductor.mysql.jdbcPassword=conductor
 
 # Hikari pool sizes are -1 by default and prevent startup
 conductor.mysql.connectionPoolMaxSize=10
 conductor.mysql.connectionPoolMinIdle=2
 
+# Elastic search instance indexing is enabled.
+conductor.indexing.enabled=true
+
 # Transport address to elasticsearch
-conductor.elasticsearch.url=elasticsearch:9300
+conductor.elasticsearch.url=http://es:9200
 
 # Name of the elasticsearch cluster
 conductor.elasticsearch.indexName=conductor
