--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -3,7 +3,7 @@
 #
 
 # 0. Builder stage
-FROM openjdk:8-jdk AS builder
+FROM openjdk:11-jdk AS builder
 
 MAINTAINER Netflix OSS <conductor@netflix.com>
 
@@ -15,7 +15,7 @@ WORKDIR /conductor
 RUN ./gradlew build -x test
 
 # 1. Bin stage
-FROM openjdk:8-jre-alpine
+FROM openjdk:11-jre
 
 MAINTAINER Netflix OSS <conductor@netflix.com>
 
@@ -32,6 +32,8 @@ RUN chmod +x /app/startup.sh
 
 EXPOSE 8080
 EXPOSE 8090
+
+HEALTHCHECK --interval=60s --timeout=30s --retries=10 CMD curl -I -XGET http://localhost:8080/health || exit 1
 
 CMD [ "/app/startup.sh" ]
 ENTRYPOINT [ "/bin/sh"]
