--- a/common/build.gradle
+++ b/common/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind"
     implementation "com.fasterxml.jackson.core:jackson-core"
 
+    implementation "org.springdoc:springdoc-openapi-ui:${revOpenapi}"
+
     testImplementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
