--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     compileOnly 'org.springframework.boot:spring-boot-starter'
     compileOnly 'org.springframework.boot:spring-boot-starter-validation'
 
+    compileOnly "org.springdoc:springdoc-openapi-ui:${revOpenapi}"
+
     implementation "org.apache.commons:commons-lang3"
 
     implementation "com.github.rholder:guava-retrying:${revGuavaRetrying}"
@@ -26,8 +28,6 @@ dependencies {
 
     implementation "com.fasterxml.jackson.core:jackson-databind"
     implementation "com.fasterxml.jackson.core:jackson-core"
-
-    implementation "org.springdoc:springdoc-openapi-ui:${revOpenapi}"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-validation'
 }
