added springdoc-openapi-ui dependency

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    implementation "org.springdoc:springdoc-openapi-ui:${revOpenapi}"
+
     runtimeOnly 'com.netflix.spectator:spectator-reg-micrometer'
 }
 
