--- a/server/build.gradle
+++ b/server/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation project(':conductor-contribs')
     implementation project(':conductor-redis-persistence')
     implementation project(':conductor-cassandra-persistence')
+    implementation project(':conductor-postgres-persistence')
     implementation project(':conductor-es6-persistence')
     implementation project(':conductor-grpc-server')
 
