--- a/server/build.gradle
+++ b/server/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation project(':conductor-redis-persistence')
     implementation project(':conductor-cassandra-persistence')
     implementation project(':conductor-postgres-persistence')
+    implementation project(':conductor-mysql-persistence')
     implementation project(':conductor-es6-persistence')
     implementation project(':conductor-grpc-server')
 
