using Spring Boot's auto configuration to create an ObjectMapper. ObjectMapperProvider is used by the client and tests.

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation "org.glassfish.jaxb:jaxb-runtime:${revJAXB}"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-validation'
+    testImplementation project(':conductor-common').sourceSets.test.output
 }
